--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-forms-builder",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A complete form builder for react.",
   "main": "lib/app.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/blackjk3/react-form-builder.git"
+    "url": "git+https://github.com/Rudgey84/FormBuilder.git"
   },
   "keywords": [
     "react",
@@ -24,54 +24,55 @@
   "author": "Jason Kadrmas",
   "license": "MIT",
   "dependencies": {
-    "classnames": "^2.1.3",
-    "fbemitter": "^2.0.0",
+    "classnames": "^2.2.5",
+    "fbemitter": "^2.1.1",
     "jquery": "^3.2.1",
-    "moment": "^2.13.0",
-    "react-anything-sortable": "^0.2.2",
-    "react-bootstrap-native-slider": "2.0.1",
-    "react-datepicker": "^0.27.0",
-    "react-select": "^0.5.5",
-    "react-signature-pad": "0.0.6",
-    "react-sortable-items": "0.0.7",
-    "react-star-rating": "git+https://github.com/blackjk3/react-star-rating.git",
-    "react-textarea-autosize": "^2.3.1",
-    "reflux": "^0.2.8",
-    "xss": "^0.2.13"
+    "moment": "^2.19.1",
+    "prop-types": "^15.6.0",
+    "react-anything-sortable": "^1.7.3",
+    "react-bootstrap-native-slider": "^2.0.1",
+    "react-datepicker": "^0.58.0",
+    "react-forms-builder": "git+https://github.com/Rudgey84/FormBuilder.git",
+    "react-select": "^1.0.0-rc.10",
+    "react-signature-pad": "^0.0.6",
+    "react-sortable-items": "^0.0.12",
+    "react-star-rating": "git+https://github.com/Rudgey84/FormBuilder.git",
+    "react-textarea-autosize": "^5.1.0",
+    "reflux": "^6.4.1",
+    "xss": "^0.3.4"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "babel": "6.23.0",
-    "babel-core": "6.24.1",
-    "babel-loader": "6.4.1",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-register": "6.24.1",
-    "canvas": "1.6.5",
-    "css-loader": "^0.16.0",
-    "draft-js": "^0.10.0",
-    "draftjs-to-html": "^0.6.1",
-    "immutable": "^3.8.1",
-    "jsdom": "3.1.2",
-    "mocha": "^3.3.0",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "canvas": "^1.6.7",
+    "create-react-class": "^15.6.2",
+    "css-loader": "^0.28.7",
+    "draft-js": "^0.10.4",
+    "draftjs-to-html": "^0.7.6",
+    "immutable": "^3.8.2",
+    "jsdom": "^11.3.0",
+    "mocha": "^4.0.1",
     "mocha-jsdom": "^1.1.0",
-    "node-libs-browser": "^1.0.0",
-    "node-sass": "^3.8.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-draft-wysiwyg": "1.7.0",
-    "react-hot-loader": "^1.2.7",
-    "react-tools": "0.13.3",
-    "sass-loader": "^2.0.1",
-    "source-map": "^0.5.6",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.10.1",
-    "webpack-dev-server": "^1.10.1"
+    "node-libs-browser": "^2.0.0",
+    "node-sass": "^4.5.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-draft-wysiwyg": "^1.10.12",
+    "react-hot-loader": "^3.1.1",
+    "react-tools": "^0.13.3",
+    "sass-loader": "^6.0.6",
+    "source-map": "^0.6.1",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   },
-  "bugs": {
-    "url": "https://github.com/blackjk3/react-form-builder/issues"
-  },
-  "homepage": "https://github.com/blackjk3/react-form-builder#readme"
+  "homepage": "https://github.com/blackjk3/react-form-builder#readme",
+  "private": true
 }
