--- a/package.json
+++ b/package.json
@@ -5,22 +5,13 @@
   "main": "lib/app.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
-    "start": "webpack-dev-server --hot --inline",
+    "start": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
     "dist": "webpack -p --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Rudgey84/FormBuilder.git"
   },
-  "keywords": [
-    "react",
-    "react-component",
-    "form",
-    "builder",
-    "ui",
-    "drag",
-    "drop"
-  ],
   "author": "Jason Kadrmas",
   "license": "MIT",
   "dependencies": {
@@ -36,7 +27,6 @@
     "react-select": "^1.0.0-rc.10",
     "react-signature-pad": "^0.0.6",
     "react-sortable-items": "^0.0.12",
-    "react-star-rating": "git+https://github.com/Rudgey84/FormBuilder.git",
     "react-textarea-autosize": "^5.1.0",
     "reflux": "^6.4.1",
     "xss": "^0.3.4"
@@ -46,16 +36,22 @@
   },
   "devDependencies": {
     "babel": "^6.23.0",
-    "babel-core": "^6.26.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
     "canvas": "^1.6.7",
     "create-react-class": "^15.6.2",
     "css-loader": "^0.28.7",
     "draft-js": "^0.10.4",
     "draftjs-to-html": "^0.7.6",
+    "extract-text-webpack-plugin": "^3.0.2",
     "immutable": "^3.8.2",
     "jsdom": "^11.3.0",
     "mocha": "^4.0.1",
@@ -66,6 +62,7 @@
     "react-dom": "^16.0.0",
     "react-draft-wysiwyg": "^1.10.12",
     "react-hot-loader": "^3.1.1",
+    "react-star-rating": "^1.4.2",
     "react-tools": "^0.13.3",
     "sass-loader": "^6.0.6",
     "source-map": "^0.6.1",
