--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/app.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive",
-    "start": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
+    "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base src --inline --hot",
     "dist": "webpack -p --config webpack.production.config.js"
   },
   "repository": {
