--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^3.3.7",
     "canvas": "^1.6.7",
     "create-react-class": "^15.6.2",
     "css-loader": "^0.28.7",
